package edu.upc.prop.scrabble.domain;

import edu.upc.prop.scrabble.data.board.Board;

public interface IBoard {
    void UpdateBoard(Board board);
}
