package edu.upc.prop.scrabble.domain.actionmaker;

public class DrawActionMaker {
}
