package edu.upc.prop.scrabble.domain.actionmaker;

public class SkipActionMaker {
}
