package edu.upc.prop.scrabble.domain.pieces;

import edu.upc.prop.scrabble.data.properties.Language;

public interface IFileReader {
    String run(Language locale);
}
