package edu.upc.prop.scrabble.domain.turns;

public interface IGamePlayer {
    void startTurn();
    void endTurn();
}
